@@ -8,6 +8,8 @@ type mvn >/dev/null 2>&1 || {
   exit -1
 }
 
+export MAVEN_OPTS="-Xmx2048m -XX:MaxPermSize=1024m"
+
 CUDA=0
 CUDAVER=0
 #
